package ca.mcmaster.se2aa4.island.team107.report;

import ca.mcmaster.se2aa4.island.team107.map.Map;

public interface Report {
  
    String generateReport(Map map);
}
