@startuml MainConcepts
!define MyTheme
skinparam class {
    BackgroundColor #LightYellow
    BorderColor #000000
    FontColor #000000
}

skinparam stereotypeCBackgroundColor #LightYellow
skinparam stereotypeCBorderColor #000000
skinparam stereotypeCFontColor #000000


package drone {
    interface Controller {
        + fly(): String
        + heading(dir: Direction): String
        + echo(dir: Direction): String
        + scan(): String
        + stop(): String
  
    }

    interface Drone {
        + drainBattery(cost: Integer): void
        + flyForward(): void
        + turnRight(): void
        + turnLeft(): void
    }

    class DroneController 

    class SimpleDrone 
}

package map {
    class ListMap

    interface Map {
        + addPOI(poi: POI): void
        + getEmergencySiteID(): String
        + getClosetCreekID(): String
    }

    enum TypePOI {
        CREEK
        EMERGENCY_SITE
    }

    class POI
}

package phase {
    class UTurn

    class ScanLine

    class MoveToCorner

    class FindIsland 

    interface Phase {
        + getDroneCommand(controller: Controller, dir: Direction): String
        + processInfo(info: JSONObject): void
        + getNextPhase(): Phase
        + isFinished(): boolean
        + isLastPhase(): boolean
    }
}

package position {
    enum Direction {
        NORTH, EAST
        SOUTH, WEST  
    }

    class Coordinate
}

package search {
    class GridSearch

    interface Search {
        + performSearch(): String
        + readResponse(response: JSONObject, map: Map): void
    }

}

package report{
    class MissionReport

    interface Report {
        + generateReport(map: Map): String
    }
}

class Explorer

' phase package
Phase <|.. MoveToCorner
Phase <|.. FindIsland
Phase <|.. ScanLine
Phase <|.. UTurn

' search package
Search <|.up. GridSearch

' drone package
Controller <|.up. DroneController
Drone <|.up. SimpleDrone
DroneController o--> Drone

' report package
Report <|.down. MissionReport

' position package
Coordinate <--o POI

' map package
Map <|.up. ListMap
POI "\n        1..*"<--* ListMap
TypePOI <-- POI

Drone <--* GridSearch
Controller <--* GridSearch
GridSearch *-right-> Phase

Coordinate <--o SimpleDrone
Direction <-- SimpleDrone

Search <-right-* Explorer
Map <--* Explorer
Report <-up-* Explorer

@enduml